--- a/ar-activities.html
+++ b/ar-activities.html
@@ -461,8 +461,10 @@
         <h3 style="text-align: right;">زيارات</h3>
         <ul class="square" style="text-align: right; direction: rtl;">
           <li><strong>المنظمات الدولية: </strong><br>
-            2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>الأمم المتحدة في جنيف
+            2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>الأمم المتحدة في جنيف
             </strong> (جنيف، سويسرا)<br>
+            2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>الوكالة الدولية للطاقة
+              المتجددة</strong> (بون، ألمانيا)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>الأمم المتحدة في فيينا
             </strong> (فيينا، النمسا)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>الأمم المتحدة في بون
