--- a/cn-activities.html
+++ b/cn-activities.html
@@ -890,6 +890,7 @@
         <ul class="square">
           <li><strong>国际组织: </strong><br>
             2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>联合国欧洲总部 </strong> (日内瓦, 瑞士)<br>
+            2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>国际可再生能源总署</strong> (波恩, 德国)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>联合国维也纳分部 </strong> (维也纳,
             奥地利)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>联合国波恩分部 </strong> (波恩, 德国)<br>
