--- a/en-activities.html
+++ b/en-activities.html
@@ -478,8 +478,10 @@
         <h3>Visiting</h3>
         <ul class="square">
           <li><strong>Int'l Organizations: </strong><br>
-            2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>United Nations in Geneva
+            2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>United Nations in Geneva
             </strong> (Geneva, Switzerland)<br>
+            2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>International Renewable Energy
+              Agency</strong> (Bonn, Germany)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>United Nations in Vienna
             </strong> (Vienna, Austria)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>United Nations in Bonn
