--- a/es-activities.html
+++ b/es-activities.html
@@ -500,8 +500,10 @@
         <h3>Visitas</h3>
         <ul class="square">
           <li><strong>Organizaciones Internacionales: </strong><br>
-            2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="ONU"> <strong>Organización de las Naciones
+            2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="ONU"> <strong>Organización de las Naciones
               Unidas en Ginebra</strong> (Ginebra, Suiza)<br>
+            2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>Agencia Internacional de
+              Energías Renovables</strong> (Bonn, Alemania)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="ONU"> <strong>Organización de las Naciones
               Unidas en Viena</strong> (Viena, Austria)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="ONU"> <strong>Organización de las Naciones
