--- a/fr-activities.html
+++ b/fr-activities.html
@@ -515,9 +515,11 @@
         <h3>Visites</h3>
         <ul class="square">
           <li><strong>Organisations Internationales : </strong><br>
-            2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="ONU"> <strong>Organisation des Nations Unies
+            2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="ONU"> <strong>Organisation des Nations Unies
               à Genève
             </strong> (Genève, Suisse)<br>
+            2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>Agence internationale pour les
+              énergies renouvelables</strong> (Bonn, Allemagne)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="ONU"> <strong>Organisation des Nations Unies
               à Vienne
             </strong> (Vienne, Autriche)<br>
