--- a/jp-activities.html
+++ b/jp-activities.html
@@ -886,6 +886,8 @@
           <li><strong>国際組織: </strong><br>
             2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>国際連合ヨーロッパ本部 </strong> (ジュネーブ,
             スイス)<br>
+            2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>国際再生可能エネルギー機関</strong> (ボン,
+            ドイツ)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>国際連合ウィーン事務所 </strong> (ウィーン,
             オーストリア)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>国際連合ボン事務所 </strong> (ボン,
