--- a/kr-activities.html
+++ b/kr-activities.html
@@ -896,6 +896,7 @@
           <li><strong>국제 기구: </strong><br>
             2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>유엔 유럽 본부 </strong> (제네바,
             스위스)<br>
+            2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>국제재생에너지기구</strong> (본, 독일)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>유엔 비엔나 사무소 </strong> (비엔나,
             오스트리아)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>유엔 본 사무소 </strong> (본, 독일)<br>
