--- a/ru-activities.html
+++ b/ru-activities.html
@@ -746,6 +746,8 @@
           <li><strong>Международные организации:</strong><br>
             2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Штаб-квартира ООН в
               Европе</strong> (Женева, Швейцария)<br>
+            2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>Международное агентство по
+              возобновляемым источникам энергии</strong> (Бонн, Германия)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Венская отделение ООН</strong>
             (Вена, Австрия)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Боннское отделение ООН</strong>
