--- a/de-activities.html
+++ b/de-activities.html
@@ -496,8 +496,10 @@
         <h3>Besuche</h3>
         <ul class="square">
           <li><strong>Internationale Organisationen: </strong><br>
-            2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Vereinte Nationen in Genf
+            2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Vereinte Nationen in Genf
             </strong> (Genf, Schweiz)<br>
+            2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>Internationale Agentur für
+              Erneuerbare Energien</strong> (Bonn, Deutschland)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Vereinte Nationen in Wien
             </strong> (Wien, Österreich)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Vereinte Nationen in Bonn
