--- a/it-activities.html
+++ b/it-activities.html
@@ -458,8 +458,10 @@
         <h3>Visite</h3>
         <ul class="square">
           <li><strong>Organizzazioni Internazionali: </strong><br>
-            2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Organizzazione delle Nazioni
+            2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Organizzazione delle Nazioni
               Unite a Ginevra</strong> (Ginevra, Svizzera)<br>
+            2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>Agenzia Internazionale per le
+              Energie Rinnovabili</strong> (Bonn, Germania)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Organizzazione delle Nazioni
               Unite a Vienna</strong> (Vienna, Austria)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Organizzazione delle Nazioni
