--- a/ar-research.html
+++ b/ar-research.html
@@ -449,8 +449,8 @@
 
       <p style="text-align: right; direction: rtl;">
 
-        <span class="display-mobile">تحياتي، أصدقائي من <span id="location2"></span>! </br></br></span>
-
+        <!-- <span class="display-mobile">تحياتي، أصدقائي من <span id="location2"></span>! </br></br></span> -->
+        <br class="display-mobile">
         من الأوساط الأكاديمية إلى الصناعة، بحثي مكرس لمجالات الطاقة النظيفة والفعالة والنقل الذكي منخفض الكربون، مع
         اهتمامات بحثية متعددة التخصصات تشمل:
 
@@ -465,12 +465,12 @@
 
 
       <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
+      <!-- <hr class="hidden-mobile"> -->
 
 
 
-      <div class="doc-section" id="research-interests" style="">
-        <h3 style="text-align: right;">اهتمامات البحث</h3>
+      <div class="doc-section hidden-mobile" id="research-interests" style="">
+        <!-- <h3 style="text-align: right;">اهتمامات البحث</h3> -->
         <div class="doc-section hidden-mobile" id="Carbon-Neutral">
 
           <div style="text-align: left;">
@@ -528,6 +528,18 @@
           </span>
         </div>
       </div>
+
+      <!-- <hr class="display-mobile" style="width:113%"> -->
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="cooperation" style="text-align: right; direction: rtl;">
+        <h3>المخطط البحثي<small><small>「نظام شبكة طاقة مقترن بالهيدروجين والكهرباء」</small></small>
+        </h3>
+        <br>
+        <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
+
+      </div>
+
 
 
       <hr class="display-mobile" style="width:113%">
