--- a/de-activities.html
+++ b/de-activities.html
@@ -336,7 +336,7 @@
             <li><a href="#"> <span class='blue'>Forscher</span> :: <span class='blue'>Ingenieur</span> :: <span
                   class='blue'>Analyst</span></a></li>
             <p>____</p>
-            <li><a href="de.html"><span>Biografie</span></a></li>
+            <li><a href="de.html"><span>Einführen</span></a></li>
             <li><a href="de-research.html">Forschung</a></li>
             <li><a href="de-resume.html">Lebenslauf</a></li>
             <li><a href="de-activities.html"><span style="color: rgb(253, 93, 7);">Aktivitäten ⏴</span></a></li>
@@ -484,7 +484,7 @@
       </p>
       <p align="justify">
 
-        <span class="display-mobile">Grüße, Freunde aus <span id="location2"></span>! </br></br></span>
+        <!-- <span class="display-mobile">Grüße, Freunde aus <span id="location2"></span>! </br></br></span> -->
         Ich bin ein begeisterter Reisender und Fotograf, der gerne Artikel schreibt, öffentliche Reden hält und durch
         verschiedene Sportarten aktiv bleibt.
       </p>
