--- a/de-research.html
+++ b/de-research.html
@@ -289,9 +289,9 @@
             <li><a href="#"> <span class='blue'>Forscher</span> :: <span class='blue'>Ingenieur</span> :: <span
                   class='blue'>Analyst</span></a></li>
             <p>____</p>
-            <li><a href="de.html"><span>Biografie</span></a></li>
+            <li><a href="de.html"><span>Einführen</span></a></li>
             <li><a href="de-research.html"><span style="color: rgb(253, 93, 7);">Forschung ⏴</span></a></li>
-            <li><a href="#publications">• Veröffentlichungen</a></li>
+            <li><a href="#publications">• Publikationen</a></li>
             <li><a href="#patents">• Patente</a></li>
             <li><a href="#presentations">• Konferenzen</a></li>
             <li><a href="#equity-research">• Aktienforschung</a></li>
@@ -436,7 +436,7 @@
 
       <p align="justify">
 
-        <span class="display-mobile">Grüße, Freunde aus <span id="location2"></span>! </br></br></span>
+        <!-- <span class="display-mobile">Grüße, Freunde aus <span id="location2"></span>! </br></br></span> -->
 
         Von der Wissenschaft zur Industrie widme ich meine Forschung den Bereichen saubere und effiziente Energie sowie
         kohlenstoffarme intelligente Verkehrssysteme, mit interdisziplinären Forschungsinteressen, die Folgendes
@@ -453,21 +453,21 @@
       </p>
 
 
-      <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
-
+      <!-- <hr class="display-mobile" style="width:113%"> -->
+      <!-- <hr class="hidden-mobile">
+ -->
 
       <div class="doc-section hidden-mobile" id="Carbon-Neutral">
-        <h3 class="hidden-mobile" style="display:inline-block">Netto-Null-Strategie</h3>
+        <!-- <h3 class="hidden-mobile" style="display:inline-block">Netto-Null-Strategie</h3>
         <div style="float: right">
           <h3>
-            <!-- weather widget start --><a class="hidden-mobile" id="weather" target="_blank"
+            <a class="hidden-mobile" id="weather" target="_blank"
               href="https://www.booked.net/weather/munich-18260"><img
                 src="https://w.bookcdn.com/weather/picture/5_18260_1_1_137AE9_160_ffffff_333333_08488D_1_ffffff_333333_0_6.png?scode=124&domid=w209&anc_id=60060"
                 width="100px" alt="booked.net" style="margin-left: 110px; margin-top: -10px;" /></a>
-            <!-- weather widget end -->
+            
           </h3>
-        </div>
+        </div> -->
         <span class="chemicals hidden-mobile">
           <div class="box-wrapper hidden-mobile">
             <div class="box hidden-mobile">
@@ -520,6 +520,20 @@
           </div>
         </span>
       </div>
+
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="cooperation">
+        <h3>Forschungsschema<small><small>「Wasserstoff-Elektrizitäts-gekoppeltes Energiesystem」</small></small>
+        </h3>
+        <br>
+        <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
+
+      </div>
+
+
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
@@ -910,76 +924,75 @@
               target="_blank">Link</a>]
           </li>
         </ol>
-
-
-        <hr class="display-mobile" style="width:113%">
-        <hr class="hidden-mobile">
-
-        <div class="doc-section" id="equity-research">
-          <h3>Aktienforschung</h3>
-          <ul class="square">
-            <li><strong>Branchen-Makroforschung (Großchina-Region):</strong><br>
-              2022 | <strong>Neue Energien</strong>: Antriebskräfte für Unternehmertum in Chinas neuer
-              Energiebranche
-              unter der Dual-Carbon-Politik<br>
-              2020 | <strong>Neue Materialien</strong>: Halbleitermaterialien Serie Teil 4: 5G treibt die optische
-              Kommunikationsindustrie, Indiumphosphid-Materialien bereit für Wachstum<br>
-              <hr>
-            <li><strong>Primärmarktforschung (Finanzierungsrunden A bis D):</strong><br>
-              2021 | <strong>UISEE Technologie</strong>: Technologie-Pioniere Serie Bericht über UISEE
-              Technologie:
-              Anbieter von Mehr-Szenario-Autonomfahrlösungen<br>
-              2021 | <strong>SemiDrive Technologie</strong>: Technologie-Pioniere Serie Bericht über SemiDrive
-              Technologie: Anbieter von intelligenten Fahrzeug-Autonom-IP-Chips<br>
-              2021 | <strong>Xi'an ESWIN Halbleiter</strong>: Forschungsanalysebericht über Xi'an ESWIN
-              Halbleiter<br>
-              <hr>
-            <li><strong>Sekundärmarktforschung (A-Aktien & US-notierte Unternehmen):</strong><br>
-              2021 | <strong>National Silicon Industry</strong> (688126.SH): Führender Pionier für große
-              Siliziumwafer
-              treibt die Lokalisierung von Chips voran (Erstberichterstattung)<br>
-              2021 | <strong>CREE</strong> (NASDAQ:CREE): Technologie-Pioniere Serie Bericht über CREE: Globaler
-              Anbieter von Leistungs-/RF-Bauelementen und LEDs (US-Aktie)<br>
-              2021 | <strong>Jingwei Hirain</strong> (688326.SH): Technologie-Pioniere Serie Bericht über Jingwei
-              Hirain
-              Technologie: Anbieter von Technologien für Automobil-Elektronik<br>
-              2020 | <strong>TankeBlue</strong> (870013.OC): Führender inländischer Hersteller von SiC-Wafern<br>
-              2020 | <strong>Hangzhou Li-on Microelectronics</strong> (605358.SH): Breiter Markt für inländische
-              Substitution, große Siliziumwafer-Industrialisierung steht kurz bevor<br>
-              2020 | <strong>Shandong Sinocera</strong> (300285.SZ): Zahnkeramiken-Branche, günstige Trends für
-              Zirkonia-Materialien<br>
-          </ul>
-        </div>
-
-
-
-        <hr class="display-mobile" style="width:113%">
-        <hr class="hidden-mobile">
-
-        <div class="doc-section" id="contact">
-          <h3>Kontakt</h3>
-          <ul class="square">
-            <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                  class='blue'>h.xu [at] tum.de</span></a> (Für Zusammenarbeit, Beratung oder Interviews,
-              kontaktieren
-              Sie
-              mich bitte!)<br /></li>
-            <li><strong>Online-Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
-                  class='blue'>calendly.com/heliosxu/45min</span></a> (1-zu-1-Meeting, bitte
-              im Voraus buchen)</li>
-            <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-                target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
-            <li><strong>Google-Scholar ID</strong>: <a
-                href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
-                target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li><br>
-            <a href="https://info.flagcounter.com/D897" target="_blank"><img
-                src="https://s01.flagcounter.com/count/D897/bg_FFFFFF/txt_404040/border_FFFFFF/columns_8/maxflags_16/viewers_3/labels_0/pageviews_1/flags_0/percent_0/"
-                border="0"></a>
-          </ul>
-
-          </ul>
-        </div>
       </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="equity-research">
+        <h3>Aktienforschung</h3>
+        <ul class="square">
+          <li><strong>Branchen-Makroforschung (Großchina-Region):</strong><br>
+            2022 | <strong>Neue Energien</strong>: Antriebskräfte für Unternehmertum in Chinas neuer
+            Energiebranche
+            unter der Dual-Carbon-Politik<br>
+            2020 | <strong>Neue Materialien</strong>: Halbleitermaterialien Serie Teil 4: 5G treibt die optische
+            Kommunikationsindustrie, Indiumphosphid-Materialien bereit für Wachstum<br>
+            <hr>
+          <li><strong>Primärmarktforschung (Finanzierungsrunden A bis D):</strong><br>
+            2021 | <strong>UISEE Technologie</strong>: Technologie-Pioniere Serie Bericht über UISEE
+            Technologie:
+            Anbieter von Mehr-Szenario-Autonomfahrlösungen<br>
+            2021 | <strong>SemiDrive Technologie</strong>: Technologie-Pioniere Serie Bericht über SemiDrive
+            Technologie: Anbieter von intelligenten Fahrzeug-Autonom-IP-Chips<br>
+            2021 | <strong>Xi'an ESWIN Halbleiter</strong>: Forschungsanalysebericht über Xi'an ESWIN
+            Halbleiter<br>
+            <hr>
+          <li><strong>Sekundärmarktforschung (A-Aktien & US-notierte Unternehmen):</strong><br>
+            2021 | <strong>National Silicon Industry</strong> (688126.SH): Führender Pionier für große
+            Siliziumwafer
+            treibt die Lokalisierung von Chips voran (Erstberichterstattung)<br>
+            2021 | <strong>CREE</strong> (NASDAQ:CREE): Technologie-Pioniere Serie Bericht über CREE: Globaler
+            Anbieter von Leistungs-/RF-Bauelementen und LEDs (US-Aktie)<br>
+            2021 | <strong>Jingwei Hirain</strong> (688326.SH): Technologie-Pioniere Serie Bericht über Jingwei
+            Hirain
+            Technologie: Anbieter von Technologien für Automobil-Elektronik<br>
+            2020 | <strong>TankeBlue</strong> (870013.OC): Führender inländischer Hersteller von SiC-Wafern<br>
+            2020 | <strong>Hangzhou Li-on Microelectronics</strong> (605358.SH): Breiter Markt für inländische
+            Substitution, große Siliziumwafer-Industrialisierung steht kurz bevor<br>
+            2020 | <strong>Shandong Sinocera</strong> (300285.SZ): Zahnkeramiken-Branche, günstige Trends für
+            Zirkonia-Materialien<br>
+        </ul>
+      </div>
+
+
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="contact">
+        <h3>Kontakt</h3>
+        <ul class="square">
+          <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
+                class='blue'>h.xu [at] tum.de</span></a> (Für Zusammenarbeit, Beratung oder Interviews,
+            kontaktieren
+            Sie
+            mich bitte!)<br /></li>
+          <li><strong>Online-Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (1-zu-1-Meeting, bitte
+            im Voraus buchen)</li>
+          <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+          <li><strong>Google-Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li><br>
+          <a href="https://info.flagcounter.com/D897" target="_blank"><img
+              src="https://s01.flagcounter.com/count/D897/bg_FFFFFF/txt_404040/border_FFFFFF/columns_8/maxflags_16/viewers_3/labels_0/pageviews_1/flags_0/percent_0/"
+              border="0"></a>
+        </ul>
+
+        </ul>
+      </div>
+
     </div><!-- Content -->
 
     <footer class="eleven center-column">
