--- a/de-resume.html
+++ b/de-resume.html
@@ -289,7 +289,7 @@
             <li><a href="#"> <span class='blue'>Forscher</span> :: <span class='blue'>Ingenieur</span> :: <span
                   class='blue'>Analyst</span></a></li>
             <p>____</p>
-            <li><a href="de.html"><span>Biografie</span></a></li>
+            <li><a href="de.html"><span>Einführen</span></a></li>
             <li><a href="de-research.html">Forschung</a></li>
             <li><a href="de-resume.html"><span style="color: rgb(253, 93, 7);">Lebenslauf ⏴</span></a></li>
             <li><a href="#education">• Ausbildung</a></li>
