--- a/en-research.html
+++ b/en-research.html
@@ -322,28 +322,29 @@
 
 
       <div class="topnav">
-        <a href="index.html" class="active">
+        <a href="en.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xu</h3>
         </a>
         <div id="myLinks">
           <ul>
-            <div style="background-color: rgb(252, 251, 248);">
+            <div style="background-color: rgba(252, 251, 248, 0);">
               <hr>
-              <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="en.html"><small>▸ Biography
-                      ⇨</small></a></strong><br>
+              <li><img src="images/logo.png" style="float:right" width="45"><a href="en.html"><small
+                    style="color: rgb(97, 97, 97);">▸ <strong>Biography</strong></small></a><br>
               </li>
-
-              <li><a href="en-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Research
-                        Progress</strong></span></small></a></li>
+              <li><strong><a href="en-research.html"><small><span>▸ Research Progress
+                        ⇨</span></small></a></strong></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#publications"
-                    style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Publications</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#patents"
-                    style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Patents</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#presentations"
-                    style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Conferences</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-research.html#equity-research"
-                    style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a></li>
+                <li style="width: 50%; box-sizing: border-box;"><a
+                    href="en-research.html#publications">&nbsp;&nbsp;&nbsp;<small>• Publications</small></a></li>
+                <li style="width: 50%; box-sizing: border-box;"><a
+                    href="en-research.html#patents">&nbsp;&nbsp;&nbsp;<small>• Patents</small></a></li>
+                <li style="width: 50%; box-sizing: border-box;"><a
+                    href="en-research.html#presentations">&nbsp;&nbsp;&nbsp;<small>• Conferences</small></a>
+                </li>
+                <li style="width: 50%; box-sizing: border-box;"><a
+                    href="en-research.html#equity-research">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a>
+                </li>
               </div>
 
               <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>CV</strong></small></a>
@@ -372,6 +373,8 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Traveling</small></a></li>
                 <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#photography"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Photography</small></a></li>
+                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#sports"
+                    style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sports</small></a></li>
               </div>
 
               <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
@@ -418,7 +421,7 @@
 
       <p align="justify">
 
-        <span class="display-mobile">Greetings, friends from <span id="location2"></span>! </br></br></span>
+        <!-- <span class="display-mobile">Greetings, friends from <span id="location2"></span>! </br></br></span> -->
 
         From academia to industry, my research dedicated to the fields of clean and efficient energy and low-carbon
         intelligent transportation, with cross-disciplinary research interests including:
@@ -438,19 +441,18 @@
 
 
       <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
+      <!-- <hr class="hidden-mobile"> -->
 
       <div class="doc-section hidden-mobile" id="Carbon-Neutral">
-        <h3 class="hidden-mobile" style="display:inline-block">Net-Zero Strategy</h3>
+        <!-- <h3 class="hidden-mobile" style="display:inline-block">Net-Zero Strategy</h3>
         <div style="float: right">
           <h3>
-            <!-- weather widget start --><a class="hidden-mobile" id="weather" target="_blank"
+            <a class="hidden-mobile" id="weather" target="_blank"
               href="https://www.booked.net/weather/munich-18260"><img
                 src="https://w.bookcdn.com/weather/picture/5_18260_1_1_137AE9_160_ffffff_333333_08488D_1_ffffff_333333_0_6.png?scode=124&domid=w209&anc_id=60060"
                 width="100px" alt="booked.net" style="margin-left: 110px; margin-top: -10px;" /></a>
-            <!-- weather widget end -->
           </h3>
-        </div>
+        </div> -->
         <span class="chemicals hidden-mobile">
           <div class="box-wrapper hidden-mobile">
             <div class="box hidden-mobile">
@@ -504,27 +506,19 @@
         </span>
       </div>
 
-      <!---
+      <!-- <hr class="display-mobile" style="width:113%"> -->
       <hr class="hidden-mobile">
-      <h3 class="hidden-mobile" style="display:inline-block">Public Speech at the United Nations Conference</h3>
-      <div class="video-container hidden-mobile">
-        <video controls>
-            <source src="/images/Bonn_Climate_v1_8MB.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+
+      <div class="doc-section" id="cooperation">
+        <h3>Research Focus<small><small>「H2-Electricity Coupled Energy System for Power
+              Grid」</small></small>
+        </h3>
+        <br>
+        <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
+
       </div>
 
-      <div class="video-container display-mobile" style="width:113%;padding-bottom: 63.25%;">
-        <video controls>
-            <source src="/images/Bonn_Climate_v1_8MB.mp4" type="video/mp4" >
-            Your browser does not support the video tag.
-        </video>
-      </div>
-
-      <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">-->
-
-      <div class="doc-section display-mobile" id="Carbon-Neutral" style="width:120%">
+      <!-- <div class="doc-section display-mobile" id="Carbon-Neutral" style="width:120%">
         <h3 class="display-mobile" style="display:inline-block">Net-Zero Strategy</h3>
         <span class="chemicals display-mobile">
           <div class="box-wrapper-mobile display-mobile">
@@ -577,7 +571,7 @@
           </div>
 
         </span>
-      </div>
+      </div> -->
 
 
 
