--- a/en.html
+++ b/en.html
@@ -393,7 +393,7 @@
         </a>
         <div id="myLinks">
           <ul>
-            <div style="background-color: rgb(252, 251, 248);">
+            <div style="background-color: rgba(252, 251, 248, 0);">
               <hr>
               <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="en.html"><small>▸ Biography
                       ⇨</small></a></strong><br>
@@ -438,6 +438,8 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Traveling</small></a></li>
                 <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#photography"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Photography</small></a></li>
+                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#sports"
+                    style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sports</small></a></li>
               </div>
 
               <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
