--- a/es-activities.html
+++ b/es-activities.html
@@ -488,7 +488,7 @@
 
       <p align="justify">
 
-        <span class="display-mobile">¡Saludos, amigos de <span id="location2"></span>! </br></br></span>
+        <!-- <span class="display-mobile">¡Saludos, amigos de <span id="location2"></span>! </br></br></span> -->
         Soy un entusiasta viajero y fotógrafo que disfruta escribir artículos, participar en conferencias y mantenerme
         activo a través de diversos deportes.
       </p>
