--- a/fr-activities.html
+++ b/fr-activities.html
@@ -503,7 +503,7 @@
 
       <p align="justify">
 
-        <span class="display-mobile">Salutations, amis de <span id="location2"></span> ! </br></br></span>
+        <!-- <span class="display-mobile">Salutations, amis de <span id="location2"></span> ! </br></br></span> -->
         Je suis un passionné de voyages et de photographie qui aime écrire des articles, s'engager dans des discours
         publics et rester actif à travers divers sports.
       </p>
