--- a/fr-research.html
+++ b/fr-research.html
@@ -454,7 +454,7 @@
 
       <p align="justify">
 
-        <span class="display-mobile">Salutations, amis de <span id="location2"></span>! </br></br></span>
+        <!-- <span class="display-mobile">Salutations, amis de <span id="location2"></span>! </br></br></span> -->
 
         De l'académie à l'industrie, ma recherche est dédiée aux domaines de l'énergie propre et efficace et du
         transport intelligent bas carbone, avec des intérêts de recherche interdisciplinaire incluant :
@@ -473,20 +473,20 @@
 
 
       <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
+      <!-- <hr class="hidden-mobile"> -->
 
 
       <div class="doc-section hidden-mobile" id="Carbon-Neutral">
-        <h3 class="hidden-mobile" style="display:inline-block">Stratégie net zéro</h3>
+        <!-- <h3 class="hidden-mobile" style="display:inline-block">Stratégie net zéro</h3>
         <div style="float: right">
           <h3>
-            <!-- weather widget start --><a class="hidden-mobile" id="weather" target="_blank"
+            <a class="hidden-mobile" id="weather" target="_blank"
               href="https://www.booked.net/weather/munich-18260"><img
                 src="https://w.bookcdn.com/weather/picture/5_18260_1_1_137AE9_160_ffffff_333333_08488D_1_ffffff_333333_0_6.png?scode=124&domid=w209&anc_id=60060"
                 width="100px" alt="booked.net" style="margin-left: 110px; margin-top: -10px;" /></a>
-            <!-- weather widget end -->
+            
           </h3>
-        </div>
+        </div> -->
         <span class="chemicals hidden-mobile">
           <div class="box-wrapper hidden-mobile">
             <div class="box hidden-mobile">
@@ -543,7 +543,16 @@
         </span>
       </div>
 
+      <hr class="hidden-mobile">
 
+      <div class="doc-section" id="cooperation">
+        <h3>Schéma de recherche<small><small>「Système de réseau énergétique couplé
+              H2-Élec」</small></small>
+        </h3>
+        <br>
+        <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
+
+      </div>
       <!---
       <hr class="hidden-mobile">
       <div class="video-container hidden-mobile">
