--- a/it-activities.html
+++ b/it-activities.html
@@ -446,7 +446,7 @@
 
       <p align="justify">
 
-        <span class="display-mobile">Saluti, amici di <span id="location2"></span>! </br></br></span>
+        <!-- <span class="display-mobile">Saluti, amici di <span id="location2"></span>! </br></br></span> -->
         Sono un appassionato viaggiatore e fotografo che ama scrivere articoli, partecipare a conferenze pubbliche e
         mantenersi attivo attraverso vari sport.
       </p>
