--- a/it-research.html
+++ b/it-research.html
@@ -446,7 +446,7 @@
 
       <p align="justify">
 
-        <span class="display-mobile">Saluti, amici da <span id="location2"></span>! </br></br></span>
+        <!-- <span class="display-mobile">Saluti, amici da <span id="location2"></span>! </br></br></span> -->
 
         Dall'accademia all'industria, la mia ricerca è dedicata ai campi dell'energia pulita ed efficiente e del
         trasporto intelligente a basse emissioni di carbonio, con interessi di ricerca interdisciplinari che includono:
@@ -464,10 +464,10 @@
 
 
       <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
+      <!-- <hr class="hidden-mobile"> -->
 
-      <div class="doc-section" id="research-interests">
-        <h3 class="doc-section" style="display:inline-block">Strategia Net-Zero</h3>
+      <div class="doc-section hidden-mobile" id="research-interests">
+        <!-- <h3 class="doc-section" style="display:inline-block">Strategia Net-Zero</h3> -->
         <div class="doc-section hidden-mobile" id="Carbon-Neutral">
 
           <div style="float: right">
@@ -528,6 +528,18 @@
           </span>
         </div>
       </div>
+
+      <!-- <hr class="display-mobile" style="width:113%"> -->
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="cooperation">
+        <h3>Schema di Ricerca<small><small>「Sistema di Rete Energetica Accoppiato Idrogeno-Elet」</small></small>
+        </h3>
+        <br>
+        <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
+
+      </div>
+
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
