--- a/jp-activities.html
+++ b/jp-activities.html
@@ -388,7 +388,7 @@
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">
         <span>
-          <ruby>講演と司会<rt><text style="color:rgb(255, 255, 255)">Hello</text></rt></ruby> <ruby>
+          <ruby>趣味や興味<rt><text style="color:rgb(255, 255, 255)">Hello</text></rt></ruby> <ruby>
             <rt><text style="color:rgb(255, 255, 255)"></text> </rt>
           </ruby><small><small><small></small></small> </small>
         </span>
@@ -503,13 +503,19 @@
         </span>
       </p>
 
+      <p align="justify">
+        料理ができない博士課程の学生は、良い写真家ではありません！山や海を越えて、日常の中で、美食と愛だけは裏切れないものです。
+      </p>
+
+
       <div>
         <hr class="display-mobile" style="width:113%">
+        <hr class="hidden-mobile">
 
-        <h3 class="display-mobile">講演と司会 <br></h3>
-        <p align="justify">
+        <h3>講演と司会<br></h3>
 
-          <strong>▸ 国連気候変動会議</strong> 分科会の司会者/講演者「中国のエネルギー転換と技術革新」(グローバルライブ放送)
+
+        <strong>▸ 国連気候変動会議</strong> 分科会の司会者/講演者「中国のエネルギー転換と技術革新」(グローバルライブ放送)
 
 
         <div class="video-container hidden-mobile">
