--- a/kr-activities.html
+++ b/kr-activities.html
@@ -357,19 +357,11 @@
             <li><a href="#travel">&nbsp;• 여행</a></li>
             <li><a href="#sports">&nbsp;• 스포츠</a></li>
             <li><a href="https://photo.h-xu.com" target="_blank">&nbsp;• 사진</a></li>
-            <li><a href="#contact">연락처</a></li>
+
             <p>____</p>
-            <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                  class='blue'>링크드인</span></a></li>
-            <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
-                target="_blank"><span class='blue'>구글 학술검색</span></a></li>
-            <!--<li><a href="https://unknown/files/Hong_XU_CV_github.io.pdf" target="_blank" target="_blank"><span class='blue'>CV</span></a></li>-->
-            <!-- <li><a href="http://www.linkedin.com/in/" target="_blank" target="_blank"><span class='blue'>LinkedIn Profile</span></a></li> -->
-            <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
-                  tum.de</span></a></li>
+            <li><a href="#contact" style="color: rgb(253, 93, 7);">연락처</a></li>
             <p>____</p>
-            <!--<li><a href="index.html" target="_self">EN</a> | <a href="cn.html" target="_self">中文</br> 
-          <a href="de.html" target="_self">DE</a> | <a href="fr.html" target="_self">FR</a></li>-->
+
             <p></p>
             <img src="images/logo.png" width="45" />
 
@@ -390,10 +382,11 @@
       </div>
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile"> <span><ruby>안녕하세요！<rt><text style="color:rgb(255, 255, 255)">An nyeong ha se yo！</text>
+      <h3 class="hidden-mobile"> <span><ruby>취미와 관심분야<rt><text style="color:rgb(255, 255, 255)">An nyeong ha se
+                yo！</text>
             </rt></ruby> <ruby>
             <rt><text style="color:rgb(255, 255, 255)"></text> </rt>
-          </ruby><small><small><small><span id="location">지구</span> 에서 온 친구들을 환영합니다 :-)</small></small> </small>
+          </ruby><small><small><small></small></small> </small>
 
         </span>
         <span style="float:right;font-family:verdana;margin-top:7px;">
@@ -512,15 +505,20 @@
         </span>
       </p>
 
+
+      <p align="justify">
+        요리를 못하는 박사과정 학생은 좋은 사진작가가 아닙니다! 산과 바다를 넘나들며, 일상 속에서 음식과 사랑만큼은 저버릴 수 없습니다.
+      </p>
+
       <!---内容开始-->
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
 
       <div>
-        <hr class="display-mobile" style="width:113%">
 
-        <h3 class="display-mobile">연설 & 사회</h3>
-        <p align="justify">
+        <h3>연설 & 사회</h3>
 
-          <strong>▸ 유엔 본 기후변화 회의</strong> 분과 사회자/연사 《중국의 에너지 전환과 기술 혁신》(글로벌 생중계)
+        <strong>▸ 유엔 본 기후변화 회의</strong> 분과 사회자/연사 《중국의 에너지 전환과 기술 혁신》(글로벌 생중계)
 
         <div class="video-container hidden-mobile">
           <video controls poster="images/Bonn_preview_cn.png">
