--- a/en-activities.html
+++ b/en-activities.html
@@ -370,15 +370,15 @@
 
 
       <div class="topnav">
-        <a href="index.html" class="active">
+        <a href="en.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xu</h3>
         </a>
         <div id="myLinks">
           <ul>
-            <div style="background-color: rgb(252, 251, 248);">
+            <div style="background-color: rgba(252, 251, 248, 0);">
               <hr>
-              <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="en.html"><small>▸ Biography
-                      ⇨</small></a></strong><br>
+              <li><img src="images/logo.png" style="float:right" width="45"><a href="en.html"><small
+                    style="color: rgb(97, 97, 97);">▸ <strong>Biography</strong></small></a><br>
               </li>
 
               <li><a href="en-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Research
@@ -407,19 +407,21 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Awards</small></a></li>
               </div>
 
-              <li><a href="en-activities.html"><small style="color: rgb(97, 97, 97);">▸
-                    <strong>Activities</strong></small></a></li>
+              <li><strong><a href="en-activities.html"><small><span>▸ Activities
+                        ⇨</span></small></a></strong></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html"
-                    style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Speaking</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#writing"
-                    style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Writing</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#visiting"
-                    style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Visiting</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#travel"
-                    style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Traveling</small></a></li>
-                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html#photography"
-                    style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Photography</small></a></li>
+                <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html">&nbsp;&nbsp;&nbsp;<small>•
+                      Speaking</small></a></li>
+                <li style="width: 50%; box-sizing: border-box;"><a
+                    href="en-activities.html#writing">&nbsp;&nbsp;&nbsp;<small>• Writing</small></a></li>
+                <li style="width: 50%; box-sizing: border-box;"><a
+                    href="en-activities.html#visiting">&nbsp;&nbsp;&nbsp;<small>• Visiting</small></a></li>
+                <li style="width: 50%; box-sizing: border-box;"><a
+                    href="en-activities.html#travel">&nbsp;&nbsp;&nbsp;<small>• Traveling</small></a></li>
+                <li style="width: 50%; box-sizing: border-box;"><a
+                    href="en-activities.html#photography">&nbsp;&nbsp;&nbsp;<small>• Photography</small></a></li>
+                <li style="width: 50%; box-sizing: border-box;"><a
+                    href="en-activities.html#sports">&nbsp;&nbsp;&nbsp;<small>• Sports</small></a></li>
               </div>
 
               <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
@@ -465,7 +467,7 @@
 
       <p align="justify">
 
-        <span class="display-mobile">Greetings, friends from <span id="location2"></span>! </br></br></span>
+        <!-- <span class="display-mobile">Greetings, friends from <span id="location2"></span>! </br></br></span> -->
         I am an avid traveler and photographer who enjoys writing articles, engaging in public speaking, and staying
         active through various sports.
       </p>
