--- a/jp-research.html
+++ b/jp-research.html
@@ -511,6 +511,18 @@
       </div>
 
 
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="cooperation">
+        <h3>研究概要<small><small>「水素-電気連携エネルギーグリッドシステム」</small></small>
+        </h3>
+        <br>
+        <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
+
+      </div>
+
+
       <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
