--- a/kr-research.html
+++ b/kr-research.html
@@ -308,14 +308,7 @@
             <li><a href="kr-activities.html">취미</a></li>
             <li><a href="#contact">연락처</a></li>
             <p>____</p>
-            <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                  class='blue'>링크드인</span></a></li>
-            <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
-                target="_blank"><span class='blue'>구글 학술검색</span></a></li>
-            <!--<li><a href="https://unknown/files/Hong_XU_CV_github.io.pdf" target="_blank" target="_blank"><span class='blue'>CV</span></a></li>-->
-            <!-- <li><a href="http://www.linkedin.com/in/" target="_blank" target="_blank"><span class='blue'>LinkedIn Profile</span></a></li> -->
-            <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
-                  tum.de</span></a></li>
+            <li><a href="#contact" style="color: rgb(253, 93, 7);">연락처</a></li>
             <p>____</p>
             <!--<li><a href="index.html" target="_self">EN</a> | <a href="cn.html" target="_self">中文</br> 
           <a href="de.html" target="_self">DE</a> | <a href="fr.html" target="_self">FR</a></li>-->
@@ -539,6 +532,18 @@
           </div>
         </span>
       </div>
+
+      <!-- <hr class="display-mobile" style="width:113%"> -->
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="cooperation">
+        <h3>연구 개요<small><small>「수소-전기 결합 에너지 그리드 시스템」</small></small>
+        </h3>
+        <br>
+        <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
+
+      </div>
+
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
