--- a/kr-resume.html
+++ b/kr-resume.html
@@ -321,19 +321,10 @@
             <li><a href="kr-resume.html#industrial-experience">&nbsp;• 산업 경험</a></li>
             <li><a href="kr-resume.html#awards">&nbsp;• 수상 경력</a></li>
             <li><a href="kr-activities.html">취미</a></li>
-            <li><a href="#contact">연락처</a></li>
+
             <p>____</p>
-            <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                  class='blue'>링크드인</span></a></li>
-            <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
-                target="_blank"><span class='blue'>구글 학술검색</span></a></li>
-            <!--<li><a href="https://unknown/files/Hong_XU_CV_github.io.pdf" target="_blank" target="_blank"><span class='blue'>CV</span></a></li>-->
-            <!-- <li><a href="http://www.linkedin.com/in/" target="_blank" target="_blank"><span class='blue'>LinkedIn Profile</span></a></li> -->
-            <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
-                  tum.de</span></a></li>
+            <li><a href="#contact" style="color: rgb(253, 93, 7);">연락처</a></li>
             <p>____</p>
-            <!--<li><a href="index.html" target="_self">EN</a> | <a href="cn.html" target="_self">中文</br> 
-          <a href="de.html" target="_self">DE</a> | <a href="fr.html" target="_self">FR</a></li>-->
             <p></p>
             <img src="images/logo.png" width="45" />
 
