--- a/ru-research.html
+++ b/ru-research.html
@@ -511,6 +511,21 @@
         </span>
       </div>
 
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="cooperation">
+        <h3>Схема исследования<small><small>「Водородно-электрическая энергосистема」</small></small>
+        </h3>
+        <br>
+        <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
+
+      </div>
+
+
+
+
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
